// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenHelmet - visible:  visible: false 이면 navbar 가 나타나지 않는다 1`] = `
<DocumentFragment>
  <div
    class="Navigator_root__hije1d2 Navigator_root_Android__hije1d3 Navigator_Android__hije1d0"
    style="--kf_navigator_animationDuration: 270ms;"
  >
    <div
      class="Card_container__1ok9rul0 Card_container_enterActive__1ok9rul1"
    >
      <div
        class="Card_mainOffset__1ok9rul9"
      >
        <div
          class="Card_main__1ok9rulc Card_main_true__1ok9rulh Card_main_true__1ok9rulj"
          style="--kf_navigator_navbar-animationDuration: 0s;"
        >
          <div
            class="Navbar_container__x613ng0"
            data-testid="navbar"
            style="--kf_navigator_navbar-center-mainWidth: undefinedpx; --kf_navigator_navbar-animationDuration: 0; --kf_navigator_navbar-translateY: -3.5rem;"
          >
            <div
              class="Navbar_main__x613ng2"
            >
              <div
                class="Navbar_flex__x613ng4"
              >
                <div
                  class="Navbar_left__x613ng5"
                >
                  <a
                    aria-label="Close"
                    class="Navbar_closeButton__x613ng9"
                    role="text"
                  >
                    <svg
                      class="Navbar_svgIcon__x613ngj"
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.56588 5.43433C6.25346 5.12191 5.74693 5.12191 5.43451 5.43433C5.12209 5.74675 5.12209 6.25328 5.43451 6.5657L10.8688 12L5.43451 17.4343C5.12209 17.7467 5.12209 18.2533 5.43451 18.5657C5.74693 18.8781 6.25346 18.8781 6.56588 18.5657L12.0002 13.1314L17.4345 18.5657C17.7469 18.8781 18.2535 18.8781 18.5659 18.5657C18.8783 18.2533 18.8783 17.7467 18.5659 17.4343L13.1316 12L18.5659 6.5657C18.8783 6.25328 18.8783 5.74675 18.5659 5.43433C18.2535 5.12191 17.7469 5.12191 17.4345 5.43433L12.0002 10.8686L6.56588 5.43433Z"
                        fill="currentColor"
                      />
                      <path
                        d="M6.56588 5.43433C6.25346 5.12191 5.74693 5.12191 5.43451 5.43433C5.12209 5.74675 5.12209 6.25328 5.43451 6.5657L10.8688 12L5.43451 17.4343C5.12209 17.7467 5.12209 18.2533 5.43451 18.5657C5.74693 18.8781 6.25346 18.8781 6.56588 18.5657L12.0002 13.1314L17.4345 18.5657C17.7469 18.8781 18.2535 18.8781 18.5659 18.5657C18.8783 18.2533 18.8783 17.7467 18.5659 17.4343L13.1316 12L18.5659 6.5657C18.8783 6.25328 18.8783 5.74675 18.5659 5.43433C18.2535 5.12191 17.7469 5.12191 17.4345 5.43433L12.0002 10.8686L6.56588 5.43433Z"
                        fill="currentColor"
                      />
                    </svg>
                  </a>
                </div>
                <div
                  class="Navbar_center__x613nga Navbar_center_true__x613ngb"
                >
                  <div
                    class="Navbar_centerMain__x613ngc Navbar_centerMain_true__x613ngd Navbar_centerMain_true__x613nge"
                  />
                  <div
                    class="Navbar_centerMainEdge__x613ngh"
                  />
                </div>
                <div
                  class="Navbar_right__x613ng7 Navbar_right_true__x613ng8"
                />
              </div>
            </div>
          </div>
          <div
            class="Card_frameOffset__1ok9rull"
          >
            <div
              class="Card_frame__1ok9rulp"
            >
              <div>
                <span>
                  example
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ScreenHelmet - visible:  visible: true 이면 navbar 가 나타난다 1`] = `
<DocumentFragment>
  <div
    class="Navigator_root__hije1d2 Navigator_root_Android__hije1d3 Navigator_Android__hije1d0"
    style="--kf_navigator_animationDuration: 270ms;"
  >
    <div
      class="Card_container__1ok9rul0 Card_container_enterActive__1ok9rul1"
    >
      <div
        class="Card_mainOffset__1ok9rul9"
      >
        <div
          class="Card_main__1ok9rulc Card_main_true__1ok9rulh Card_main_true__1ok9ruli Card_main_true__1ok9rulj"
          style="--kf_navigator_navbar-animationDuration: 0s;"
        >
          <div
            class="Navbar_container__x613ng0"
            data-testid="navbar"
            style="--kf_navigator_navbar-center-mainWidth: undefinedpx; --kf_navigator_navbar-animationDuration: 0; --kf_navigator_navbar-translateY: 0;"
          >
            <div
              class="Navbar_main__x613ng2"
            >
              <div
                class="Navbar_flex__x613ng4"
              >
                <div
                  class="Navbar_left__x613ng5"
                >
                  <a
                    aria-label="Close"
                    class="Navbar_closeButton__x613ng9"
                    role="text"
                  >
                    <svg
                      class="Navbar_svgIcon__x613ngj"
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.56588 5.43433C6.25346 5.12191 5.74693 5.12191 5.43451 5.43433C5.12209 5.74675 5.12209 6.25328 5.43451 6.5657L10.8688 12L5.43451 17.4343C5.12209 17.7467 5.12209 18.2533 5.43451 18.5657C5.74693 18.8781 6.25346 18.8781 6.56588 18.5657L12.0002 13.1314L17.4345 18.5657C17.7469 18.8781 18.2535 18.8781 18.5659 18.5657C18.8783 18.2533 18.8783 17.7467 18.5659 17.4343L13.1316 12L18.5659 6.5657C18.8783 6.25328 18.8783 5.74675 18.5659 5.43433C18.2535 5.12191 17.7469 5.12191 17.4345 5.43433L12.0002 10.8686L6.56588 5.43433Z"
                        fill="currentColor"
                      />
                      <path
                        d="M6.56588 5.43433C6.25346 5.12191 5.74693 5.12191 5.43451 5.43433C5.12209 5.74675 5.12209 6.25328 5.43451 6.5657L10.8688 12L5.43451 17.4343C5.12209 17.7467 5.12209 18.2533 5.43451 18.5657C5.74693 18.8781 6.25346 18.8781 6.56588 18.5657L12.0002 13.1314L17.4345 18.5657C17.7469 18.8781 18.2535 18.8781 18.5659 18.5657C18.8783 18.2533 18.8783 17.7467 18.5659 17.4343L13.1316 12L18.5659 6.5657C18.8783 6.25328 18.8783 5.74675 18.5659 5.43433C18.2535 5.12191 17.7469 5.12191 17.4345 5.43433L12.0002 10.8686L6.56588 5.43433Z"
                        fill="currentColor"
                      />
                    </svg>
                  </a>
                </div>
                <div
                  class="Navbar_center__x613nga Navbar_center_true__x613ngb"
                >
                  <div
                    class="Navbar_centerMain__x613ngc Navbar_centerMain_true__x613ngd Navbar_centerMain_true__x613nge"
                  />
                  <div
                    class="Navbar_centerMainEdge__x613ngh"
                  />
                </div>
                <div
                  class="Navbar_right__x613ng7 Navbar_right_true__x613ng8"
                />
              </div>
            </div>
          </div>
          <div
            class="Card_frameOffset__1ok9rull"
          >
            <div
              class="Card_frame__1ok9rulp"
            >
              <div>
                <span>
                  example
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
